[gd_scene load_steps=12 format=2]

[ext_resource path="res://arena/mat/bricks/brick_7.png" type="Texture" id=1]
[ext_resource path="res://arena/bricks/Pointer.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=7]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 16 )

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.1875, 0.572368, 0.860082 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -1.52256, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
lifetime_randomness = 1.0
emission_shape = 2
emission_box_extents = Vector3( 17, 17, 17 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -5.0
scale = 3.0
scale_curve = SubResource( 11 )
color_ramp = SubResource( 9 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 15, 15 )

[sub_resource type="Animation" id=14]
resource_name = "outro"
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../part_Points:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0.025, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../part_Points:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.7, 0.7 ) ]
}

[node name="Pointer" type="StaticBody2D" groups=["level_items", "pointers"]]
position = Vector2( 1325, 261 )
collision_layer = 4
collision_mask = 3
physics_material_override = SubResource( 7 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 6 )
disabled = true

[node name="part_Points" type="Particles2D" parent="."]
emitting = false
amount = 320
lifetime = 4.0
one_shot = true
speed_scale = 6.0
explosiveness = 0.75
randomness = 1.0
process_material = SubResource( 12 )

[node name="PointerForceField" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="PointerForceField"]
shape = SubResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../PointerForceField")
anims/outro = SubResource( 14 )

[connection signal="body_entered" from="PointerForceField" to="." method="_on_ForceField_body_entered"]
[connection signal="body_exited" from="PointerForceField" to="." method="_on_ForceField_body_exited"]
